# semilib

./: .cvsignore  .gitignore  AUTHORS  Doxyfile  Doxyfile.in  Makefile.am  NEWS  README  README.md  TODO  config.h.in  configure.ac  env.in  mainpage.h  semilib.pc.in  semilogger.pc.in  semiregex.pc.in  semiutils.pc.in  templateFnuction.cpp  testistring.cpp
docs/: AbstractRegex.html  AbstractRegex_h.html  Change.html  Change_h.html  Cloneable.html  Cloneable_h.html  Constructor.html  FileUtils_h.html  FlagsMapper_h.html  Line_h.html  Lock.html  Lock_h.html  MarkStream.html  MarkStream_h.html  PersistenceManager.html  PersistenceManager_h.html  Persistence_h.html  RefCount.html  RefCount_h.html  Result.html  Result_h.html  SmartPointer.html  SmartPointer_h.html  StaticInit_h.html  Timer_h.html  all-globals.html  full-list-AbstractRegex.html  full-list-Change.html  full-list-Cloneable.html  full-list-Constructor.html  full-list-Lock.html  full-list-MarkStream.html  full-list-PersistenceManager.html  full-list-RefCount.html  full-list-Result.html  full-list-SmartPointer.html  functions_h.html  header-list.html  hier.html  index-long.html  (+6 more)
fuzzy/: BasicSoundex.cpp  BasicSoundex.h  FuzzyTextSearch.cpp  FuzzyTextSearch.oroginal.cpp  Makefile  Makefile.am  NGram.cpp  NGram.h  NGramFunctor.cpp  NGramFunctor.h  Ranking.cpp  Ranking.h  Soundex.cpp.bak  SoundexCharLookup.cpp  SoundexCharLookup.h  SoundexFunctor.cpp  SoundexFunctor.h  configure.ac  fuzzy.h  fuzzydlldef.h  inputlist  matchfunctions.cpp  matchfunctions.h  testsearch.sh
fuzzy/testdata/: towns  townsuburbs  uniqts
regex/: .cvsignore  AbstractRegex.h  Makefile  Makefile.am  Regex.cpp  Regex.dsp  Regex.h  RegexLib.dsp  RegexLibrary.dsp  SubExpression.h  TestThreads.dsp  changes.txt  compiler.txt  configure.ac  reg_loc.h  regex++.vpj  regex-switch.h.in  regexTest.cpp  regexdlldef.h  regexlib.h  testThreads.cpp
utils/: .cvsignore  .gdbinit  .gitignore  Change.h  CharArray.h  Cloneable.h  CoutLogger.cpp  CoutLogger.h  FileLogger.cpp  FileLogger.h  FileUtils.cpp  FileUtils.h  FlagsMapper.cpp  FlagsMapper.h  Line.h  Lock.cpp  Lock.h  Logger.cpp  Logger.h  Makefile.am  MarkStream.h  MultiResult.h  Mutex.cpp  Mutex.h  NiceDate.cpp  NiceDate.h  Persistence.cpp  Persistence.h  PersistenceManager.cpp  PersistenceManager.h  PredicateResult.cpp  PredicateResult.h  RefCount.cpp  RefCount.h  Result.cpp  Result.h  SingleResult.h  Singleton.cpp  Singleton.h  SmartPointer-new.h  (+42 more)
win32/: FuzzyTextSearch.dsp  FuzzyTextSearch.dsw  FuzzyTextSearch.opt  Makefile.am  Makefile.win32  Regex.dsw  Regex.opt  Utils.dsp  Utils.dsw  Utils.opt  coutlogger.vcproj  dllUtils.dsp  dllUtils.dsw  dllUtils.vcproj  fuzzyDynamic.dsp  fuzzyMatch.dsp  fuzzyMatch.dsw  fuzzyMatch.opt  install.cmd  logger.vcproj  persistence.dsp  regexdll.dsp  semilib-dll.vcproj  semilib-lib.vcproj  semilib.sln  test.dsp  testLogger.vcproj  testUtils.vcproj  testi.dsp  utilsStatic.dsp
